k8-dashboard.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/secure-backends: "true"
  namespace: kube-system
spec:
  tls:
  - hosts:
    - internal-hc-cdx-uai2002170-1064081077.us-east-1.elb.amazonaws.com
  rules:
  - host: internal-hc-cdx-uai2002170-1064081077.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /ui
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
