prometheus.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 labels:
  name: prometheus
 name: prometheus
 namespace: monitoring
spec:
  replicas: 1
  template:
   metadata:
    labels:
      app: prometheus-server
   spec:
    serviceAccountName: prometheus
    containers:
    - name: prometheus
      image: prom/prometheus:v2.11.1
      args:
        - "--config.file=/etc/prometheus/prometheus.yml"
        - "--storage.tsdb.path=/prometheus/"
        - "--web.enable-lifecycle"
        - "--storage.tsdb.no-lockfile"
      imagePullPolicy: Always
      resources:
        limits:
          cpu: "1500m"
        requests:
          cpu: "400m"
      ports:
        - containerPort: 9090
          protocol: TCP
      volumeMounts:
        - mountPath: "/etc/prometheus"
          name: config-prometheus
        - name: prometheus-storage-volume
          mountPath: "/prometheus/"
    securityContext:
        fsGroup: 2000
        runAsNonRoot: true
        runAsUser: 1000
    volumes:
    - name: config-prometheus
      configMap:
        name: prometheus-config
    - name: prometheus-storage-volume
      persistentVolumeClaim:
        claimName: prometheus-claim
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  ports:
  - port: 80
    targetPort: 9090
  selector:
    app: prometheus-server
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-prometheus
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: cdx-prometheus-eu-np.cloud.health.ge.com
    http:
      paths:
      - path: /
        backend:
            serviceName: prometheus
            servicePort: 80

---
